--- a/prism.css
+++ b/prism.css
@@ -15,8 +15,8 @@ pre[class*="language-"] {
 
 /* Code blocks */
 pre[class*="language-"] {
-	padding: 0 0.5em;
-	margin: .5em 0;
+	padding: 0 0.5rem;
+	margin: .5rem 0;
 	overflow: auto;
 }
 
@@ -43,8 +43,8 @@ textarea {
 	height: 20rem;
 	box-sizing: border-box;
 	overflow: auto;
-	border: solid 0.2em #888;
-	border-radius: 0.4em;
+	border: solid 0.2rem #888;
+	border-radius: 0.4rem;
 	margin-top: 1rem;
 }
 
